@@ -4,7 +4,7 @@ use warnings;
 use English;
 use Error::Pure::Utils qw(clean);
 use Mo::utils qw(check_bool);
-use Test::More 'tests' => 6;
+use Test::More 'tests' => 7;
 use Test::NoWarnings;
 
 # Test.
@@ -51,3 +51,10 @@ eval {
 is($EVAL_ERROR, "Parameter 'key' must be a bool (0/1).\n",
 	"Parameter 'key' must be a bool (0/1).");
 clean();
+
+# Test.
+$self = {
+	'key' => undef,
+};
+$ret = check_bool($self, 'key');
+is($ret, undef, 'Right undefined value.');
