@@ -1,5 +1,6 @@
 0.13
  - Add another error for situation if key doesn't exists.
+ - Add tests for undefined values.
  - Sort modules usage in tests.
 
 0.12 2022-09-23T11:41:43+02:00
